[gd_scene load_steps=12 format=3 uid="uid://cno6hvxvhow5g"]

[ext_resource type="Script" uid="uid://ccuawpdubav0j" path="res://scenes/enemies/bat.gd" id="1"]
[ext_resource type="Script" uid="uid://bfn6qpasqhfbl" path="res://scripts/components/health_component.gd" id="2"]
[ext_resource type="Script" uid="uid://dgeknfhmjqkbo" path="res://scripts/components/hitbox_component.gd" id="3"]
[ext_resource type="Script" uid="uid://r28ie5k2qe42" path="res://scripts/components/hurtbox_component.gd" id="4"]
[ext_resource type="Script" uid="uid://ev1a4sf23xwc" path="res://scripts/components/stats_component.gd" id="5"]
[ext_resource type="Script" uid="uid://562i0odggvoc" path="res://scripts/resources/stat_block.gd" id="6"]
[ext_resource type="Script" uid="uid://cfb1wb1ufwpxl" path="res://scripts/components/status_effect_component.gd" id="7"]

[sub_resource type="Resource" id="bat_base_stats"]
script = ExtResource("6")

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_2"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3"]

[node name="Bat" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("5")
base_stats = SubResource("bat_base_stats")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")
max_health = 20.0
base_max_health = 20.0

[node name="StatusEffectComponent" type="Node" parent="."]
script = ExtResource("7")

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("3")
recoil_force = 60.0

[node name="HitboxShape" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_2")

[node name="HurtboxComponent" type="Area2D" parent="."]
script = ExtResource("4")
hurtbox_layer = 3
invincibility_time = 0.0

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_3")
